--- a/sec-unit2-summary.html
+++ b/sec-unit2-summary.html
@@ -14,7 +14,7 @@
 <!--******************************************-->
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Front Matter</title>
+<title>Unit 2 Summary</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
@@ -153,7 +153,7 @@ eBookConfig.enable_chatcodes =  false;
 <textarea class="embed-code-textbox" id="embed-code-textbox" readonly aria-label="textbox"><iframe src="https://example.com/embed" width="100%" height="1000"></iframe></textarea><button class="copy-embed-button button" id="copy-embed-button" title="Copy embed code"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe14d;</span><span class="name">Copy</span></button>
 </div>
 </div>
-<button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="my-great-book.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="my-great-book.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><span class="next-button button disabled"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></span></span>
+<button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="sec-ethics-spotlight-sampling.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="ch-unit2.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="ch-unit3.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
 </div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\newcommand{\N}{\mathbb N} \newcommand{\Z}{\mathbb Z} \newcommand{\Q}{\mathbb Q} \newcommand{\R}{\mathbb R}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
@@ -163,7 +163,7 @@ eBookConfig.enable_chatcodes =  false;
 \)</span></div>
 <div class="ptx-page">
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2 focused" data-preexpanded-levels="0" data-max-levels="2"><ul class="structural toc-item-list contains-active">
-<li class="toc-item toc-frontmatter active"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
+<li class="toc-item toc-frontmatter"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
 <li class="toc-item toc-chapter">
 <div class="toc-title-box"><a href="ch-unit1.html" class="internal"><span class="codenumber">1</span> <span class="title">Unit 1: Foundations of Data Science</span></a></div>
 <ul class="structural toc-item-list">
@@ -201,9 +201,9 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-unit1-summary.html" class="internal"><span class="title">Unit 1 Summary</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-chapter">
+<li class="toc-item toc-chapter contains-active">
 <div class="toc-title-box"><a href="ch-unit2.html" class="internal"><span class="codenumber">2</span> <span class="title">Unit 2: The Data Investigation Process</span></a></div>
-<ul class="structural toc-item-list">
+<ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="sec-investigation-framework.html" class="internal"><span class="title">The Data Investigation Framework</span></a></div>
 <ul class="structural toc-item-list">
@@ -233,7 +233,7 @@ eBookConfig.enable_chatcodes =  false;
 </ul>
 </li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-ethics-spotlight-sampling.html" class="internal"><span class="title">Ethics Spotlight: Representation in Data</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-unit2-summary.html" class="internal"><span class="title">Unit 2 Summary</span></a></div></li>
+<li class="toc-item toc-section active"><div class="toc-title-box"><a href="sec-unit2-summary.html" class="internal"><span class="title">Unit 2 Summary</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-chapter">
@@ -277,21 +277,40 @@ eBookConfig.enable_chatcodes =  false;
 </li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="frontmatter" id="frontmatter"><h2 class="heading">
-<span class="title">Introduction to Data Science:</span> <span class="subtitle">A Low-Code Project-Based Approach</span>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="sec-unit2-summary"><h2 class="heading hide-type">
+<span class="type">Section</span><span class="space"> </span><span class="codenumber"></span><span class="space"> </span><span class="title">Unit 2 Summary</span>
 </h2>
-<div class="author">
-<div class="author-name">Hannah Kurzweil</div>
-<div class="author-info">Data Science 4 Everyone</div>
-</div>
-<div class="date">May 16, 2025</div>
-<section class="introduction" id="frontmatter-3"><div class="para" id="frontmatter-3-1">Data shapes our world through countless decisions every day. From personalized music recommendations to content algorithms, and even critical determinations like educational assistance eligibility—data science powers it all. Behind these systems are algorithms—structured sets of rules that computers follow to transform raw information into actionable insights.</div>
-<div class="para" id="frontmatter-3-2">The field of data science harnesses these algorithmic tools to extract meaning from vast datasets, offering powerful capabilities while requiring careful consideration. When data-driven systems determine academic outcomes or financial opportunities, we must question how these mechanisms work and who designs them. Transparency matters.</div>
-<div class="para" id="frontmatter-3-3">In this introduction to data science course, you’ll explore the fundamental concepts behind data collection, analysis, and interpretation. You’ll discover how personal data fuels decision-making processes and the real-world impacts these decisions have on individuals and communities. By understanding both the technical aspects and ethical dimensions of data science, you’ll be equipped to harness its potential responsibly while recognizing its limitations.</div>
-<div class="para" id="frontmatter-3-4">This book introduces foundational concepts in data science through a project-based approach using CODAP, a free web-based data analysis platform that will help you unlock insights into complex datasets from the world around you.</div>
-<div class="para" id="frontmatter-3-5">This work is licensed under the Creative Commons Attribution-ShareAlike 4.0 International License. To view a copy of this license, visit CreativeCommons.org</div></section><nav class="summary-links"><ul></ul></nav></section></div>
+<div class="para" id="sec-unit2-summary-2">In this unit, we’ve explored:</div>
+<ul class="disc" id="sec-unit2-summary-3">
+<li id="sec-unit2-summary-3-1"><div class="para" id="sec-unit2-summary-3-1-1">The data investigation framework developed by Hollylynne Lee and colleagues, which provides a structured approach to data analysis</div></li>
+<li id="sec-unit2-summary-3-2"><div class="para" id="sec-unit2-summary-3-2-1">How to formulate effective statistical questions that anticipate variability and can be answered with data</div></li>
+<li id="sec-unit2-summary-3-3"><div class="para" id="sec-unit2-summary-3-3-1">The components of a comprehensive investigation plan, including research questions, data requirements, analysis approaches, and potential challenges</div></li>
+<li id="sec-unit2-summary-3-4"><div class="para" id="sec-unit2-summary-3-4-1">Fundamental concepts of statistical thinking, particularly the importance of understanding and accounting for variability</div></li>
+<li id="sec-unit2-summary-3-5"><div class="para" id="sec-unit2-summary-3-5-1">Ethical considerations regarding representation in data and how they affect the conclusions we can draw</div></li>
+</ul>
+<div class="para" id="sec-unit2-summary-4">By the end of this unit, you should have a clear investigation plan for your project dataset, including well-formulated statistical questions and a strategy for analysis. This plan will guide your work in the upcoming units as we dive deeper into data moves and visualization techniques.</div>
+<details id="exercise-unit2-reflection" class="exercise exercise-like born-hidden-knowl"><summary class="knowl__link"><h3 class="heading">
+<span class="type">Checkpoint</span><span class="space"> </span><span class="codenumber">50</span><span class="period">.</span><span class="space"> </span><span class="title">Unit 2 Reflection.</span>
+</h3></summary><article class="exercise exercise-like knowl__content"><div class="para" id="exercise-unit2-reflection-2-1">Take some time to reflect on what you’ve learned in this unit:</div> <ul class="disc" id="exercise-unit2-reflection-2-2">
+<li id="exercise-unit2-reflection-2-2-1"><div class="para" id="exercise-unit2-reflection-2-2-1-1">How has the data investigation framework changed your approach to analyzing data?</div></li>
+<li id="exercise-unit2-reflection-2-2-2"><div class="para" id="exercise-unit2-reflection-2-2-2-1">What was most challenging about formulating effective statistical questions?</div></li>
+<li id="exercise-unit2-reflection-2-2-3"><div class="para" id="exercise-unit2-reflection-2-2-3-1">How does understanding variability influence the way you think about data?</div></li>
+<li id="exercise-unit2-reflection-2-2-4"><div class="para" id="exercise-unit2-reflection-2-2-4-1">What aspects of your investigation plan are you most confident about, and which might need refinement as you proceed?</div></li>
+</ul></article></details><details id="mc-unit2-review" class="exercise exercise-like born-hidden-knowl"><summary class="knowl__link"><h3 class="heading">
+<span class="type">Checkpoint</span><span class="space"> </span><span class="codenumber">51</span><span class="period">.</span><span class="space"> </span><span class="title">Unit 2 Review.</span>
+</h3></summary><article class="exercise exercise-like knowl__content"><div class="ptx-runestone-container"><div class="runestone multiplechoice_section"><ul data-component="multiplechoice" id="rs-mc-unit2-review" data-multipleanswers="false">
+<div class="para" id="mc-unit2-review-2-1">Which of the following BEST describes the main purpose of the data investigation framework?</div>
+<li data-component="answer" id="rs-mc-unit2-review_opt_a"><div class="para" id="mc-unit2-review-3-1-1-1">To provide a rigid, linear sequence of steps that must be followed in every data analysis</div></li>
+<li data-component="feedback" id="rs-mc-unit2-review_opt_a"><div class="para" id="mc-unit2-review-3-1-2-1">The framework is not meant to be rigid or strictly linear. Real investigations often involve cycling back through earlier phases as new insights emerge.</div></li>
+<li data-component="answer" id="rs-mc-unit2-review_opt_b"><div class="para" id="mc-unit2-review-3-2-1-1">To replace critical thinking with standardized procedures for data analysis</div></li>
+<li data-component="feedback" id="rs-mc-unit2-review_opt_b"><div class="para" id="mc-unit2-review-3-2-2-1">The framework is designed to enhance critical thinking, not replace it. It provides a structure while still requiring judgment and creativity.</div></li>
+<li data-component="answer" id="rs-mc-unit2-review_opt_c" data-correct=""><div class="para" id="mc-unit2-review-3-3-1-1">To provide a structured approach that ensures all important aspects of data investigation are considered</div></li>
+<li data-component="feedback" id="rs-mc-unit2-review_opt_c"><div class="para" id="mc-unit2-review-3-3-2-1">Correct! The framework serves as a guide to help ensure that important elements like question formulation, data quality assessment, appropriate analysis, and careful interpretation are all addressed.</div></li>
+<li data-component="answer" id="rs-mc-unit2-review_opt_d"><div class="para" id="mc-unit2-review-3-4-1-1">To automate the process of analyzing data so that minimal human intervention is required</div></li>
+<li data-component="feedback" id="rs-mc-unit2-review_opt_d"><div class="para" id="mc-unit2-review-3-4-2-1">The framework does not automate analysis; it provides a conceptual structure for human investigators to follow while still requiring substantial judgment and expertise.</div></li>
+</ul></div></div></article></details></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
-<a class="previous-button button" href="my-great-book.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><span class="next-button button disabled"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></span>
+<a class="previous-button button" href="sec-ethics-spotlight-sampling.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="ch-unit3.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
