--- a/ch-unit3.html
+++ b/ch-unit3.html
@@ -14,7 +14,7 @@
 <!--******************************************-->
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Front Matter</title>
+<title>Unit 3: Essential Data Moves</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
@@ -153,7 +153,7 @@ eBookConfig.enable_chatcodes =  false;
 <textarea class="embed-code-textbox" id="embed-code-textbox" readonly aria-label="textbox"><iframe src="https://example.com/embed" width="100%" height="1000"></iframe></textarea><button class="copy-embed-button button" id="copy-embed-button" title="Copy embed code"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe14d;</span><span class="name">Copy</span></button>
 </div>
 </div>
-<button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="my-great-book.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="my-great-book.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><span class="next-button button disabled"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></span></span>
+<button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="sec-unit2-summary.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="my-great-book.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="sec-data-cleaning.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
 </div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\newcommand{\N}{\mathbb N} \newcommand{\Z}{\mathbb Z} \newcommand{\Q}{\mathbb Q} \newcommand{\R}{\mathbb R}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
@@ -163,7 +163,7 @@ eBookConfig.enable_chatcodes =  false;
 \)</span></div>
 <div class="ptx-page">
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2 focused" data-preexpanded-levels="0" data-max-levels="2"><ul class="structural toc-item-list contains-active">
-<li class="toc-item toc-frontmatter active"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
+<li class="toc-item toc-frontmatter"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
 <li class="toc-item toc-chapter">
 <div class="toc-title-box"><a href="ch-unit1.html" class="internal"><span class="codenumber">1</span> <span class="title">Unit 1: Foundations of Data Science</span></a></div>
 <ul class="structural toc-item-list">
@@ -236,9 +236,9 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-unit2-summary.html" class="internal"><span class="title">Unit 2 Summary</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-chapter">
+<li class="toc-item toc-chapter contains-active">
 <div class="toc-title-box"><a href="ch-unit3.html" class="internal"><span class="codenumber">3</span> <span class="title">Unit 3: Essential Data Moves</span></a></div>
-<ul class="structural toc-item-list">
+<ul class="structural toc-item-list active">
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="sec-data-cleaning.html" class="internal"><span class="title">Data Cleaning and Organization</span></a></div>
 <ul class="structural toc-item-list">
@@ -277,21 +277,21 @@ eBookConfig.enable_chatcodes =  false;
 </li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="frontmatter" id="frontmatter"><h2 class="heading">
-<span class="title">Introduction to Data Science:</span> <span class="subtitle">A Low-Code Project-Based Approach</span>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="chapter" id="ch-unit3"><h2 class="heading">
+<span class="type">Chapter</span><span class="space"> </span><span class="codenumber">3</span><span class="space"> </span><span class="title">Unit 3: Essential Data Moves</span>
 </h2>
-<div class="author">
-<div class="author-name">Hannah Kurzweil</div>
-<div class="author-info">Data Science 4 Everyone</div>
-</div>
-<div class="date">May 16, 2025</div>
-<section class="introduction" id="frontmatter-3"><div class="para" id="frontmatter-3-1">Data shapes our world through countless decisions every day. From personalized music recommendations to content algorithms, and even critical determinations like educational assistance eligibility—data science powers it all. Behind these systems are algorithms—structured sets of rules that computers follow to transform raw information into actionable insights.</div>
-<div class="para" id="frontmatter-3-2">The field of data science harnesses these algorithmic tools to extract meaning from vast datasets, offering powerful capabilities while requiring careful consideration. When data-driven systems determine academic outcomes or financial opportunities, we must question how these mechanisms work and who designs them. Transparency matters.</div>
-<div class="para" id="frontmatter-3-3">In this introduction to data science course, you’ll explore the fundamental concepts behind data collection, analysis, and interpretation. You’ll discover how personal data fuels decision-making processes and the real-world impacts these decisions have on individuals and communities. By understanding both the technical aspects and ethical dimensions of data science, you’ll be equipped to harness its potential responsibly while recognizing its limitations.</div>
-<div class="para" id="frontmatter-3-4">This book introduces foundational concepts in data science through a project-based approach using CODAP, a free web-based data analysis platform that will help you unlock insights into complex datasets from the world around you.</div>
-<div class="para" id="frontmatter-3-5">This work is licensed under the Creative Commons Attribution-ShareAlike 4.0 International License. To view a copy of this license, visit CreativeCommons.org</div></section><nav class="summary-links"><ul></ul></nav></section></div>
+<section class="introduction" id="ch-unit3-2"><div class="para" id="ch-unit3-2-1">Now that we have established a foundation in data science concepts and developed investigation plans, we’re ready to start working with data more directly. In this unit, we’ll explore essential "data moves"—the operations we perform to transform raw data into meaningful insights.</div>
+<div class="para" id="ch-unit3-2-2">Data rarely comes in perfect form, ready for analysis. Instead, we typically need to clean it, organize it, filter it, summarize it, and create new calculations to answer our questions. These data moves are the building blocks of data science work, enabling us to reveal patterns and stories within our datasets.</div>
+<div class="para" id="ch-unit3-2-3">Throughout this unit, we’ll continue working with our Community Health and Environment dataset while you apply similar techniques to your own chosen datasets. By the end of this unit, you’ll have a toolkit of essential data moves to prepare your data for deeper analysis and visualization.</div></section><nav class="summary-links"><ul>
+<li><a href="sec-data-cleaning.html" class="internal"><span class="title">Data Cleaning and Organization</span></a></li>
+<li><a href="sec-filtering-subsetting.html" class="internal"><span class="title">Filtering and Subsetting</span></a></li>
+<li><a href="sec-ethics-spotlight-selection.html" class="internal"><span class="title">Ethics Spotlight: Selection Bias</span></a></li>
+<li><a href="sec-summarizing-calculating.html" class="internal"><span class="title">Summarizing, Calculating, and Grouping</span></a></li>
+<li><a href="sec-statistical-thinking-comparing.html" class="internal"><span class="title">Statistical Thinking: Comparing Groups</span></a></li>
+<li><a href="sec-unit3-summary.html" class="internal"><span class="title">Unit 3 Summary</span></a></li>
+</ul></nav></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
-<a class="previous-button button" href="my-great-book.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><span class="next-button button disabled"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></span>
+<a class="previous-button button" href="sec-unit2-summary.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="sec-data-cleaning.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
