--- a/sec-unit3-summary.html
+++ b/sec-unit3-summary.html
@@ -14,7 +14,7 @@
 <!--******************************************-->
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Front Matter</title>
+<title>Unit 3 Summary</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
@@ -153,7 +153,7 @@ eBookConfig.enable_chatcodes =  false;
 <textarea class="embed-code-textbox" id="embed-code-textbox" readonly aria-label="textbox"><iframe src="https://example.com/embed" width="100%" height="1000"></iframe></textarea><button class="copy-embed-button button" id="copy-embed-button" title="Copy embed code"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe14d;</span><span class="name">Copy</span></button>
 </div>
 </div>
-<button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="my-great-book.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="my-great-book.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><span class="next-button button disabled"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></span></span>
+<button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="sec-statistical-thinking-comparing.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="ch-unit3.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="backmatter.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
 </div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\newcommand{\N}{\mathbb N} \newcommand{\Z}{\mathbb Z} \newcommand{\Q}{\mathbb Q} \newcommand{\R}{\mathbb R}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
@@ -163,7 +163,7 @@ eBookConfig.enable_chatcodes =  false;
 \)</span></div>
 <div class="ptx-page">
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2 focused" data-preexpanded-levels="0" data-max-levels="2"><ul class="structural toc-item-list contains-active">
-<li class="toc-item toc-frontmatter active"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
+<li class="toc-item toc-frontmatter"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
 <li class="toc-item toc-chapter">
 <div class="toc-title-box"><a href="ch-unit1.html" class="internal"><span class="codenumber">1</span> <span class="title">Unit 1: Foundations of Data Science</span></a></div>
 <ul class="structural toc-item-list">
@@ -236,9 +236,9 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-unit2-summary.html" class="internal"><span class="title">Unit 2 Summary</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-chapter">
+<li class="toc-item toc-chapter contains-active">
 <div class="toc-title-box"><a href="ch-unit3.html" class="internal"><span class="codenumber">3</span> <span class="title">Unit 3: Essential Data Moves</span></a></div>
-<ul class="structural toc-item-list">
+<ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="sec-data-cleaning.html" class="internal"><span class="title">Data Cleaning and Organization</span></a></div>
 <ul class="structural toc-item-list">
@@ -272,26 +272,49 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-statistical-thinking-comparing.html#subsec-meaningful-comparisons" class="internal"><span class="title">Making Meaningful Comparisons</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-unit3-summary.html" class="internal"><span class="title">Unit 3 Summary</span></a></div></li>
+<li class="toc-item toc-section active"><div class="toc-title-box"><a href="sec-unit3-summary.html" class="internal"><span class="title">Unit 3 Summary</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="frontmatter" id="frontmatter"><h2 class="heading">
-<span class="title">Introduction to Data Science:</span> <span class="subtitle">A Low-Code Project-Based Approach</span>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="sec-unit3-summary"><h2 class="heading hide-type">
+<span class="type">Section</span><span class="space"> </span><span class="codenumber"></span><span class="space"> </span><span class="title">Unit 3 Summary</span>
 </h2>
-<div class="author">
-<div class="author-name">Hannah Kurzweil</div>
-<div class="author-info">Data Science 4 Everyone</div>
-</div>
-<div class="date">May 16, 2025</div>
-<section class="introduction" id="frontmatter-3"><div class="para" id="frontmatter-3-1">Data shapes our world through countless decisions every day. From personalized music recommendations to content algorithms, and even critical determinations like educational assistance eligibility—data science powers it all. Behind these systems are algorithms—structured sets of rules that computers follow to transform raw information into actionable insights.</div>
-<div class="para" id="frontmatter-3-2">The field of data science harnesses these algorithmic tools to extract meaning from vast datasets, offering powerful capabilities while requiring careful consideration. When data-driven systems determine academic outcomes or financial opportunities, we must question how these mechanisms work and who designs them. Transparency matters.</div>
-<div class="para" id="frontmatter-3-3">In this introduction to data science course, you’ll explore the fundamental concepts behind data collection, analysis, and interpretation. You’ll discover how personal data fuels decision-making processes and the real-world impacts these decisions have on individuals and communities. By understanding both the technical aspects and ethical dimensions of data science, you’ll be equipped to harness its potential responsibly while recognizing its limitations.</div>
-<div class="para" id="frontmatter-3-4">This book introduces foundational concepts in data science through a project-based approach using CODAP, a free web-based data analysis platform that will help you unlock insights into complex datasets from the world around you.</div>
-<div class="para" id="frontmatter-3-5">This work is licensed under the Creative Commons Attribution-ShareAlike 4.0 International License. To view a copy of this license, visit CreativeCommons.org</div></section><nav class="summary-links"><ul></ul></nav></section></div>
+<div class="para" id="sec-unit3-summary-2">In this unit, we’ve explored essential data moves that transform raw data into meaningful insights:</div>
+<ul class="disc" id="sec-unit3-summary-3">
+<li id="sec-unit3-summary-3-1"><div class="para" id="sec-unit3-summary-3-1-1">
+<dfn class="terminology">Data Cleaning and Organization</dfn>: We learned how to handle missing values, deal with outliers, and restructure data to prepare it for analysis.</div></li>
+<li id="sec-unit3-summary-3-2"><div class="para" id="sec-unit3-summary-3-2-1">
+<dfn class="terminology">Filtering and Subsetting</dfn>: We explored techniques for creating focused subsets of data to answer specific questions and make meaningful comparisons.</div></li>
+<li id="sec-unit3-summary-3-3"><div class="para" id="sec-unit3-summary-3-3-1">
+<dfn class="terminology">Summarizing and Calculating</dfn>: We examined summary statistics that capture key aspects of our data and learned to create derived variables that reveal new insights.</div></li>
+<li id="sec-unit3-summary-3-4"><div class="para" id="sec-unit3-summary-3-4-1">
+<dfn class="terminology">Grouping and Comparing</dfn>: We developed skills for aggregating data by categories and making meaningful comparisons between groups.</div></li>
+</ul>
+<div class="para" id="sec-unit3-summary-4">We also explored important ethical considerations regarding selection bias and developed our statistical thinking about variation within and between groups.</div>
+<div class="para" id="sec-unit3-summary-5">By the end of this unit, you should have applied these data moves to both our Community Health dataset and your own chosen dataset. These skills provide the foundation for the more advanced visualization and communication techniques we’ll explore in the next unit.</div>
+<details id="exercise-unit3-reflection" class="exercise exercise-like born-hidden-knowl"><summary class="knowl__link"><h3 class="heading">
+<span class="type">Checkpoint</span><span class="space"> </span><span class="codenumber">86</span><span class="period">.</span><span class="space"> </span><span class="title">Unit 3 Reflection.</span>
+</h3></summary><article class="exercise exercise-like knowl__content"><div class="para" id="exercise-unit3-reflection-2-1">Take some time to reflect on what you’ve learned in this unit:</div> <ul class="disc" id="exercise-unit3-reflection-2-2">
+<li id="exercise-unit3-reflection-2-2-1"><div class="para" id="exercise-unit3-reflection-2-2-1-1">Which data move did you find most challenging to implement, and why?</div></li>
+<li id="exercise-unit3-reflection-2-2-2"><div class="para" id="exercise-unit3-reflection-2-2-2-1">What surprised you about your dataset when you applied these data moves?</div></li>
+<li id="exercise-unit3-reflection-2-2-3"><div class="para" id="exercise-unit3-reflection-2-2-3-1">How have these data moves helped you address your investigation questions?</div></li>
+<li id="exercise-unit3-reflection-2-2-4"><div class="para" id="exercise-unit3-reflection-2-2-4-1">What new questions have emerged as you’ve worked with your data?</div></li>
+</ul></article></details><details id="mc-unit3-review" class="exercise exercise-like born-hidden-knowl"><summary class="knowl__link"><h3 class="heading">
+<span class="type">Checkpoint</span><span class="space"> </span><span class="codenumber">87</span><span class="period">.</span><span class="space"> </span><span class="title">Unit 3 Review.</span>
+</h3></summary><article class="exercise exercise-like knowl__content"><div class="ptx-runestone-container"><div class="runestone multiplechoice_section"><ul data-component="multiplechoice" id="rs-mc-unit3-review" data-multipleanswers="false">
+<div class="para" id="mc-unit3-review-2-1">Which sequence of data moves best represents a typical data analysis workflow?</div>
+<li data-component="answer" id="rs-mc-unit3-review_opt_a"><div class="para" id="mc-unit3-review-3-1-1-1">Grouping → Cleaning → Filtering → Creating visualizations</div></li>
+<li data-component="feedback" id="rs-mc-unit3-review_opt_a"><div class="para" id="mc-unit3-review-3-1-2-1">This sequence is problematic because grouping data before cleaning it could lead to incorrect aggregations based on errors or missing values.</div></li>
+<li data-component="answer" id="rs-mc-unit3-review_opt_b" data-correct=""><div class="para" id="mc-unit3-review-3-2-1-1">Cleaning → Creating derived variables → Filtering → Grouping and comparing</div></li>
+<li data-component="feedback" id="rs-mc-unit3-review_opt_b"><div class="para" id="mc-unit3-review-3-2-2-1">Correct! This sequence represents a logical workflow: first clean the data to address quality issues, then create any needed derived variables, then filter to focus on relevant subsets, and finally group and compare to identify patterns.</div></li>
+<li data-component="answer" id="rs-mc-unit3-review_opt_c"><div class="para" id="mc-unit3-review-3-3-1-1">Filtering → Cleaning → Summarizing → Creating derived variables</div></li>
+<li data-component="feedback" id="rs-mc-unit3-review_opt_c"><div class="para" id="mc-unit3-review-3-3-2-1">Filtering before cleaning could result in removing data that might be valuable once cleaned, potentially introducing bias.</div></li>
+<li data-component="answer" id="rs-mc-unit3-review_opt_d"><div class="para" id="mc-unit3-review-3-4-1-1">Creating derived variables → Summarizing → Cleaning → Grouping</div></li>
+<li data-component="feedback" id="rs-mc-unit3-review_opt_d"><div class="para" id="mc-unit3-review-3-4-2-1">Creating derived variables before cleaning could propagate errors into new variables, and summarizing before cleaning could lead to misleading statistics.</div></li>
+</ul></div></div></article></details></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
-<a class="previous-button button" href="my-great-book.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><span class="next-button button disabled"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></span>
+<a class="previous-button button" href="sec-statistical-thinking-comparing.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="backmatter.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
