Latest build deployed.

--- a/sec-what-is-data-science.html
+++ b/sec-what-is-data-science.html
@@ -275,6 +275,111 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-unit3-summary.html" class="internal"><span class="title">Unit 3 Summary</span></a></div></li>
 </ul>
 </li>
+<li class="toc-item toc-chapter">
+<div class="toc-title-box"><a href="ch-unit4.html" class="internal"><span class="codenumber">4</span> <span class="title">Unit 4: Data Visualization and Communication</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-visualization-fundamentals.html" class="internal"><span class="title">Visualization Fundamentals</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-visualization-fundamentals.html#subsec-why-visualize" class="internal"><span class="title">The Power of Data Visualization</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-visualization-fundamentals.html#subsec-chart-selection" class="internal"><span class="title">Choosing the Right Visualization</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-visualization-fundamentals.html#subsec-visualization-principles" class="internal"><span class="title">Principles of Effective Visualization</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-visualization-fundamentals.html#subsec-codap-viz" class="internal"><span class="title">Creating Visualizations in CODAP</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-ethics-misleading.html" class="internal"><span class="title">Ethics Spotlight: Avoiding Misleading Visualizations</span></a></div></li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-advanced-visualization.html" class="internal"><span class="title">Advanced Visualization and Analysis</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-advanced-visualization.html#subsec-multi-variable" class="internal"><span class="title">Visualizing Multi-Variable Relationships</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-advanced-visualization.html#subsec-dashboards" class="internal"><span class="title">Building Effective Dashboards</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-advanced-visualization.html#subsec-statistical-relationships" class="internal"><span class="title">Statistical Thinking: Correlation and Relationships</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-data-storytelling.html" class="internal"><span class="title">Project Synthesis and Presentation</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-data-storytelling.html#subsec-data-storytelling" class="internal"><span class="title">Data Storytelling Principles</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-data-storytelling.html#subsec-presentation-techniques" class="internal"><span class="title">Effective Presentation Techniques</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-data-storytelling.html#subsec-effective-communication" class="internal"><span class="title">Communicating Data Ethically and Effectively</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-unit4-summary.html" class="internal"><span class="title">Unit 4 Summary</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-chapter">
+<div class="toc-title-box"><a href="ch-project-guide.html" class="internal"><span class="codenumber">5</span> <span class="title">Data Science Project Guide</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-project-overview.html" class="internal"><span class="title">Project Overview</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-project-overview.html#subsec-learning-objectives" class="internal"><span class="title">Learning Objectives</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-project-overview.html#subsec-dataset-selection" class="internal"><span class="title">Dataset Selection Guidelines</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-project-workflow.html" class="internal"><span class="title">Project Workflow and Timeline</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-project-workflow.html#subsec-phase1" class="internal"><span class="title">Phase 1: Dataset Selection and Exploration (Unit 1)</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-project-workflow.html#subsec-phase2" class="internal"><span class="title">Phase 2: Investigation Planning (Unit 2)</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-project-workflow.html#subsec-phase3" class="internal"><span class="title">Phase 3: Data Analysis and Processing (Unit 3)</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-project-workflow.html#subsec-phase4" class="internal"><span class="title">Phase 4: Visualization and Communication (Unit 4)</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-project-assessment.html" class="internal"><span class="title">Assessment and Grading</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-project-assessment.html#subsec-grading-breakdown" class="internal"><span class="title">Grading Breakdown</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-project-assessment.html#subsec-evaluation-rubrics" class="internal"><span class="title">Evaluation Rubrics</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-project-tips.html" class="internal"><span class="title">Tips for Success</span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-project-tips.html#subsec-common-challenges" class="internal"><span class="title">Common Challenges and Solutions</span></a></div></li></ul>
+</li>
+</ul>
+</li>
+<li class="toc-item toc-chapter">
+<div class="toc-title-box"><a href="ch-codap-guide.html" class="internal"><span class="codenumber">6</span> <span class="title">CODAP Reference Guide</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-codap-basics.html" class="internal"><span class="title">Getting Started with CODAP</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-codap-basics.html#subsec-accessing-codap" class="internal"><span class="title">Accessing CODAP</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-codap-basics.html#subsec-interface-overview" class="internal"><span class="title">Interface Overview</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-codap-basics.html#subsec-importing-data" class="internal"><span class="title">Importing Data</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-core-features.html" class="internal"><span class="title">Core CODAP Features</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-core-features.html#subsec-working-with-tables" class="internal"><span class="title">Working with Tables</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-core-features.html#subsec-creating-graphs" class="internal"><span class="title">Creating and Customizing Graphs</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-core-features.html#subsec-calculated-attributes" class="internal"><span class="title">Creating Calculated Attributes</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-core-features.html#subsec-mapping" class="internal"><span class="title">Geographic Mapping</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-advanced-techniques.html" class="internal"><span class="title">Advanced CODAP Techniques</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-advanced-techniques.html#subsec-hierarchical-data" class="internal"><span class="title">Working with Hierarchical Data</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-advanced-techniques.html#subsec-filtering-techniques" class="internal"><span class="title">Advanced Filtering Techniques</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-advanced-techniques.html#subsec-data-import-export" class="internal"><span class="title">Advanced Data Import and Export</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-advanced-techniques.html#subsec-building-dashboards" class="internal"><span class="title">Building Interactive Dashboards</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-tips-tricks.html" class="internal"><span class="title">CODAP Tips, Tricks, and Troubleshooting</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-tips-tricks.html#subsec-keyboard-shortcuts" class="internal"><span class="title">Keyboard Shortcuts and Efficiency Tips</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-tips-tricks.html#subsec-common-issues" class="internal"><span class="title">Common Issues and Solutions</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-tips-tricks.html#subsec-advanced-tricks" class="internal"><span class="title">Advanced CODAP Tricks</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-tips-tricks.html#subsec-best-practices" class="internal"><span class="title">CODAP Best Practices</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-codap-resources.html" class="internal"><span class="title">Additional CODAP Resources</span></a></div></li>
+</ul>
+</li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="sec-what-is-data-science"><h2 class="heading hide-type">
