--- a/ch-unit4.html
+++ b/ch-unit4.html
@@ -14,7 +14,7 @@
 <!--******************************************-->
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Ethics Spotlight: Selection Bias</title>
+<title>Unit 4: Data Visualization and Communication</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
@@ -153,7 +153,7 @@ eBookConfig.enable_chatcodes =  false;
 <textarea class="embed-code-textbox" id="embed-code-textbox" readonly aria-label="textbox"><iframe src="https://example.com/embed" width="100%" height="1000"></iframe></textarea><button class="copy-embed-button button" id="copy-embed-button" title="Copy embed code"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe14d;</span><span class="name">Copy</span></button>
 </div>
 </div>
-<button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="sec-filtering-subsetting.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="ch-unit3.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="sec-summarizing-calculating.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
+<button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="sec-unit3-summary.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="my-great-book.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="sec-visualization-fundamentals.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
 </div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\newcommand{\N}{\mathbb N} \newcommand{\Z}{\mathbb Z} \newcommand{\Q}{\mathbb Q} \newcommand{\R}{\mathbb R}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
@@ -236,9 +236,9 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-unit2-summary.html" class="internal"><span class="title">Unit 2 Summary</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-chapter contains-active">
+<li class="toc-item toc-chapter">
 <div class="toc-title-box"><a href="ch-unit3.html" class="internal"><span class="codenumber">3</span> <span class="title">Unit 3: Essential Data Moves</span></a></div>
-<ul class="structural toc-item-list contains-active">
+<ul class="structural toc-item-list">
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="sec-data-cleaning.html" class="internal"><span class="title">Data Cleaning and Organization</span></a></div>
 <ul class="structural toc-item-list">
@@ -256,7 +256,7 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-filtering-subsetting.html#subsec-meaningful-subsets" class="internal"><span class="title">Creating Meaningful Subsets</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-section active"><div class="toc-title-box"><a href="sec-ethics-spotlight-selection.html" class="internal"><span class="title">Ethics Spotlight: Selection Bias</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-ethics-spotlight-selection.html" class="internal"><span class="title">Ethics Spotlight: Selection Bias</span></a></div></li>
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="sec-summarizing-calculating.html" class="internal"><span class="title">Summarizing, Calculating, and Grouping</span></a></div>
 <ul class="structural toc-item-list">
@@ -275,9 +275,9 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-unit3-summary.html" class="internal"><span class="title">Unit 3 Summary</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-chapter">
+<li class="toc-item toc-chapter contains-active">
 <div class="toc-title-box"><a href="ch-unit4.html" class="internal"><span class="codenumber">4</span> <span class="title">Unit 4: Data Visualization and Communication</span></a></div>
-<ul class="structural toc-item-list">
+<ul class="structural toc-item-list active">
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="sec-visualization-fundamentals.html" class="internal"><span class="title">Visualization Fundamentals</span></a></div>
 <ul class="structural toc-item-list">
@@ -382,66 +382,20 @@ eBookConfig.enable_chatcodes =  false;
 </li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="sec-ethics-spotlight-selection"><h2 class="heading hide-type">
-<span class="type">Section</span><span class="space"> </span><span class="codenumber"></span><span class="space"> </span><span class="title">Ethics Spotlight: Selection Bias</span>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="chapter" id="ch-unit4"><h2 class="heading">
+<span class="type">Chapter</span><span class="space"> </span><span class="codenumber">4</span><span class="space"> </span><span class="title">Unit 4: Data Visualization and Communication</span>
 </h2>
-<div class="para" id="sec-ethics-spotlight-selection-2">When filtering and subsetting data, we must be careful not to introduce selection bias—a distortion in our results due to the way we select cases for analysis.</div>
-<article class="definition definition-like" id="def-selection-bias"><h3 class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">68</span><span class="period">.</span>
-</h3>
-<div class="para" id="def-selection-bias-1-1">
-<dfn class="terminology">Selection bias</dfn> occurs when the data selected for analysis is not representative of the population about which conclusions are to be drawn, leading to systematic error in the findings.</div></article><div class="para" id="sec-ethics-spotlight-selection-4">Common forms of selection bias include:</div>
-<dl class="description-list">
-<dt id="sec-ethics-spotlight-selection-5-1">Sampling Bias</dt>
-<dd><div class="para" id="sec-ethics-spotlight-selection-5-1-2">The sample selected for study doesn’t represent the population of interest.</div></dd>
-<dt id="sec-ethics-spotlight-selection-5-2">Self-Selection Bias</dt>
-<dd><div class="para" id="sec-ethics-spotlight-selection-5-2-2">Participants choose whether to participate, potentially introducing systematic differences between participants and non-participants.</div></dd>
-<dt id="sec-ethics-spotlight-selection-5-3">Survival Bias</dt>
-<dd><div class="para" id="sec-ethics-spotlight-selection-5-3-2">Analysis focuses only on cases that "survived" some process, ignoring those that didn’t.</div></dd>
-<dt id="sec-ethics-spotlight-selection-5-4">Exclusion Bias</dt>
-<dd><div class="para" id="sec-ethics-spotlight-selection-5-4-2">Systematic exclusion of certain groups or cases due to methodological choices.</div></dd>
-<dt id="sec-ethics-spotlight-selection-5-5">Confirmation Bias</dt>
-<dd><div class="para" id="sec-ethics-spotlight-selection-5-5-2">Tendency to filter data in ways that confirm preexisting beliefs or hypotheses.</div></dd>
-</dl>
-<details id="example-selection-bias-health" class="example example-like born-hidden-knowl"><summary class="knowl__link"><h3 class="heading">
-<span class="type">Example</span><span class="space"> </span><span class="codenumber">69</span><span class="period">.</span><span class="space"> </span><span class="title">Selection Bias in Community Health Research.</span>
-</h3></summary><article class="example example-like knowl__content"><div class="para" id="example-selection-bias-health-2-1">In our Community Health project, selection bias might occur if:</div> <ul class="disc" id="example-selection-bias-health-2-2">
-<li id="example-selection-bias-health-2-2-1"><div class="para" id="example-selection-bias-health-2-2-1-1">We exclude neighborhoods with missing data, which happen to be primarily lower-income areas</div></li>
-<li id="example-selection-bias-health-2-2-2"><div class="para" id="example-selection-bias-health-2-2-2-1">Health survey data includes only responses from residents who volunteered to participate</div></li>
-<li id="example-selection-bias-health-2-2-3"><div class="para" id="example-selection-bias-health-2-2-3-1">Air quality measurements are taken only during weekdays, missing weekend patterns</div></li>
-<li id="example-selection-bias-health-2-2-4"><div class="para" id="example-selection-bias-health-2-2-4-1">We focus our analysis only on neighborhoods with good outcomes to identify "best practices"</div></li>
-<li id="example-selection-bias-health-2-2-5"><div class="para" id="example-selection-bias-health-2-2-5-1">We filter data to include only cases that support our initial hypothesis about environmental factors</div></li>
-</ul> <div class="para" id="example-selection-bias-health-2-3">Each of these filtering or selection decisions could lead to conclusions that don’t accurately represent the true relationships in the complete population.</div></article></details><div class="para" id="sec-ethics-spotlight-selection-7">To minimize selection bias when filtering data:</div>
-<ul class="disc" id="sec-ethics-spotlight-selection-8">
-<li id="sec-ethics-spotlight-selection-8-1"><div class="para" id="sec-ethics-spotlight-selection-8-1-1">Document all filtering criteria and justify them based on substantive rather than convenient reasons</div></li>
-<li id="sec-ethics-spotlight-selection-8-2"><div class="para" id="sec-ethics-spotlight-selection-8-2-1">Consider how excluded cases differ from included ones</div></li>
-<li id="sec-ethics-spotlight-selection-8-3"><div class="para" id="sec-ethics-spotlight-selection-8-3-1">Perform sensitivity analysis by comparing results with different filtering criteria</div></li>
-<li id="sec-ethics-spotlight-selection-8-4"><div class="para" id="sec-ethics-spotlight-selection-8-4-1">Be transparent about the limitations of your filtered dataset</div></li>
-<li id="sec-ethics-spotlight-selection-8-5"><div class="para" id="sec-ethics-spotlight-selection-8-5-1">Actively look for potential sources of bias in your selection process</div></li>
-</ul>
-<details id="mc-selection-bias" class="exercise exercise-like born-hidden-knowl"><summary class="knowl__link"><h3 class="heading">
-<span class="type">Checkpoint</span><span class="space"> </span><span class="codenumber">70</span><span class="period">.</span><span class="space"> </span><span class="title">Identifying Selection Bias.</span>
-</h3></summary><article class="exercise exercise-like knowl__content"><div class="ptx-runestone-container"><div class="runestone multiplechoice_section"><ul data-component="multiplechoice" id="rs-mc-selection-bias" data-multipleanswers="false">
-<div class="para" id="mc-selection-bias-2-1">Which scenario represents the clearest example of selection bias?</div>
-<li data-component="answer" id="rs-mc-selection-bias_opt_a"><div class="para" id="mc-selection-bias-3-1-1-1">A researcher randomly selects 100 participants from a complete list of 1,000 eligible individuals.</div></li>
-<li data-component="feedback" id="rs-mc-selection-bias_opt_a"><div class="para" id="mc-selection-bias-3-1-2-1">This describes proper random sampling rather than selection bias, as every eligible individual had an equal chance of being selected.</div></li>
-<li data-component="answer" id="rs-mc-selection-bias_opt_b"><div class="para" id="mc-selection-bias-3-2-1-1">After collecting data, a researcher finds that one variable has a non-normal distribution.</div></li>
-<li data-component="feedback" id="rs-mc-selection-bias_opt_b"><div class="para" id="mc-selection-bias-3-2-2-1">A non-normal distribution is not necessarily an indication of bias; many variables naturally have skewed or other non-normal distributions.</div></li>
-<li data-component="answer" id="rs-mc-selection-bias_opt_c"><div class="para" id="mc-selection-bias-3-3-1-1">A study finds weak but statistically significant correlations between variables.</div></li>
-<li data-component="feedback" id="rs-mc-selection-bias_opt_c"><div class="para" id="mc-selection-bias-3-3-2-1">Finding weak correlations is not an indication of selection bias; it simply describes the strength of relationships in the data.</div></li>
-<li data-component="answer" id="rs-mc-selection-bias_opt_d" data-correct=""><div class="para" id="mc-selection-bias-3-4-1-1">A survey about internet usage is conducted exclusively through online questionnaires.</div></li>
-<li data-component="feedback" id="rs-mc-selection-bias_opt_d"><div class="para" id="mc-selection-bias-3-4-2-1">Correct! This is a clear example of selection bias. By conducting the survey only online, the study systematically excludes people with limited or no internet access, who likely have different internet usage patterns than those who regularly use the internet.</div></li>
-</ul></div></div></article></details><article class="activity project-like" id="activity-selection-bias"><h3 class="heading">
-<span class="type">Activity</span><span class="space"> </span><span class="codenumber">20</span><span class="period">.</span><span class="space"> </span><span class="title">Identifying Potential Selection Bias.</span>
-</h3>
-<div class="introduction" id="activity-selection-bias-2"><div class="para" id="activity-selection-bias-2-1">In this activity, you’ll examine potential selection bias in your own data analysis.</div></div>
-<article class="task exercise-like" id="activity-selection-bias-3"><h4 class="heading"><span class="codenumber">(a)</span></h4>
-<div class="para" id="activity-selection-bias-3-1-1">Review the filtering and subsetting operations you’ve performed on your dataset. For each filter, identify who or what is being excluded.</div></article><article class="task exercise-like" id="activity-selection-bias-4"><h4 class="heading"><span class="codenumber">(b)</span></h4>
-<div class="para" id="activity-selection-bias-4-1-1">Consider how these exclusions might affect your conclusions. Are you systematically excluding certain types of cases?</div></article><article class="task exercise-like" id="activity-selection-bias-5"><h4 class="heading"><span class="codenumber">(c)</span></h4>
-<div class="para" id="activity-selection-bias-5-1-1">Identify at least one potential source of selection bias in your data collection process (before you even received the dataset).</div></article><article class="task exercise-like" id="activity-selection-bias-6"><h4 class="heading"><span class="codenumber">(d)</span></h4>
-<div class="para" id="activity-selection-bias-6-1-1">Propose strategies for addressing or minimizing the selection bias you’ve identified.</div></article></article></section></div>
+<section class="introduction" id="ch-unit4-2"><div class="para" id="ch-unit4-2-1">Having developed skills in data cleaning, filtering, and summarizing, we now turn our attention to one of the most important aspects of data science: visualization and communication. The ability to create effective visualizations and communicate insights clearly can transform raw data and analysis into actionable knowledge.</div>
+<div class="para" id="ch-unit4-2-2">In this unit, we’ll explore the principles of effective data visualization, learn techniques for creating various types of charts and graphs in CODAP, and develop skills for communicating data stories. We’ll also examine multi-variable relationships and build comprehensive dashboards to present our findings.</div>
+<div class="para" id="ch-unit4-2-3">By the end of this unit, you’ll have created a complete data dashboard for your project and developed a presentation that effectively communicates your key findings and insights.</div></section><nav class="summary-links"><ul>
+<li><a href="sec-visualization-fundamentals.html" class="internal"><span class="title">Visualization Fundamentals</span></a></li>
+<li><a href="sec-ethics-misleading.html" class="internal"><span class="title">Ethics Spotlight: Avoiding Misleading Visualizations</span></a></li>
+<li><a href="sec-advanced-visualization.html" class="internal"><span class="title">Advanced Visualization and Analysis</span></a></li>
+<li><a href="sec-data-storytelling.html" class="internal"><span class="title">Project Synthesis and Presentation</span></a></li>
+<li><a href="sec-unit4-summary.html" class="internal"><span class="title">Unit 4 Summary</span></a></li>
+</ul></nav></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
-<a class="previous-button button" href="sec-filtering-subsetting.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="sec-summarizing-calculating.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
+<a class="previous-button button" href="sec-unit3-summary.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="sec-visualization-fundamentals.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
